// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog test Component setup should return null when isOpen is false 1`] = `null`;

exports[`Dialog test Component snapshot check adds another child item 1`] = `
.c0 {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 100%;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  height: 100%;
  width: 32px;
}

.c3:hover {
  cursor: pointer;
}

.c4 {
  max-height: calc(80vh - );
  min-height: 20vh;
  overflow-y: auto;
}

.c4 img {
  max-width: 100%;
  object-fit: cover;
}

@media (min-width:600px) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .c1 {
    width: 50%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

<div
  className="c0"
  data-testid="DialogWrapper"
  onClick={[Function]}
>
  <div
    className="c1"
    data-testid="Dialog"
    onClick={[Function]}
  >
    <div
      className="c2"
      data-testid="DialogHeader"
    >
      <h2
        className=""
        data-testid="DialogTitle"
      >
        Title
      </h2>
      <div
        className="c3"
        data-testid="DialogCloseButton"
        onClick={[Function]}
      >
        <img
          alt="Close"
        />
      </div>
    </div>
    <div
      className="c4"
      data-testid="DialogContent"
    >
      <p>
        Content
      </p>
      <p>
        Content 2
      </p>
    </div>
  </div>
</div>
`;

exports[`Dialog test Component snapshot check changes closeOnOverlayClick attribute 1`] = `
.c0 {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 100%;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  height: 100%;
  width: 32px;
}

.c3:hover {
  cursor: pointer;
}

.c4 {
  max-height: calc(80vh - );
  min-height: 20vh;
  overflow-y: auto;
}

.c4 img {
  max-width: 100%;
  object-fit: cover;
}

@media (min-width:600px) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .c1 {
    width: 50%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

<div
  className="c0"
  data-testid="DialogWrapper"
>
  <div
    className="c1"
    data-testid="Dialog"
    onClick={[Function]}
  >
    <div
      className="c2"
      data-testid="DialogHeader"
    >
      <h2
        className=""
        data-testid="DialogTitle"
      >
        Title
      </h2>
      <div
        className="c3"
        data-testid="DialogCloseButton"
        onClick={[Function]}
      >
        <img
          alt="Close"
        />
      </div>
    </div>
    <div
      className="c4"
      data-testid="DialogContent"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Dialog test Component snapshot check changes isOpen attribute 1`] = `null`;

exports[`Dialog test Component snapshot check render just with required attributes 1`] = `null`;

exports[`Dialog test Component snapshot check renders correctly 1`] = `
.c0 {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 100%;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  height: 100%;
  width: 32px;
}

.c3:hover {
  cursor: pointer;
}

.c4 {
  max-height: calc(80vh - );
  min-height: 20vh;
  overflow-y: auto;
}

.c4 img {
  max-width: 100%;
  object-fit: cover;
}

@media (min-width:600px) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:600px) {
  .c1 {
    width: 50%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

<div
  className="c0"
  data-testid="DialogWrapper"
  onClick={[Function]}
>
  <div
    className="c1"
    data-testid="Dialog"
    onClick={[Function]}
  >
    <div
      className="c2"
      data-testid="DialogHeader"
    >
      <h2
        className=""
        data-testid="DialogTitle"
      >
        Title
      </h2>
      <div
        className="c3"
        data-testid="DialogCloseButton"
        onClick={[Function]}
      >
        <img
          alt="Close"
        />
      </div>
    </div>
    <div
      className="c4"
      data-testid="DialogContent"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;
